tests/fixtures/invalid/divmod_int_str.py
# Cannot call divmod() with Int, Str
x = divmod(1, "hello")
